@@ -9,6 +9,9 @@ lintian-brush (0.46) UNRELEASED; urgency=medium
   * Add a --exclude flag.
   * Attempt to preserve YAML directives in debian/upstream/metadata, if
     present. See #946413
+  * Disable setting of the Screenshots field in debian/upstream/metadata
+    to individual files; it seems likely these will get stale and become
+    a source of toil.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Sun, 08 Dec 2019 15:33:27 +0000
 
